# RayTracer

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build-run.sh  camera.h  cmake_install.cmake  hitable.h  main.cpp  material.h  model.h  programfile  random.h  raytracer  sphere.h  texture.h  vector.h  world.h
include/: noise.h  stb_image.h
